z-index fixed

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ header {
 
 body.header-bg header {
     background: #375019;
-    z-index: 10;
+    z-index: 100;
 }
 
 header .header-flexbox {
